--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,26 +1,39 @@
-*{
+* { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
-body{
+body {
     background-color: rgb(72, 104, 105);
-    margin: 20%;
-    padding-left: 25%;
+    margin: 10%;
+    padding-left: 22%;
 }
 
-a{
-    color: beige;
+a {
+    color: #f2d6ce;
     text-decoration: none;
     font-size: 30px;
     font-family: "bloom";
-    font-size: 100px;
-    font-weight: 600;
+    font-size: 200px;
+    font-weight: 400;
     font-style: normal;
+    text-transform: uppercase;
+}
+.story{
+    transition-duration: 20s;
 }
 
-p{
+/* mouse over link */
+.story:hover {
+    background-color: beige;
+    transform: rotate(8000deg);
+}
+
+p {
     color: beige;
+    font-family: "children books";
+    font-weight: 200;
+    font-size: 40px;
+
 }
