--- a/pageThree/css/pageThreeStyling.css
+++ b/pageThree/css/pageThreeStyling.css
@@ -3,9 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    min-height: 100vh;
+    width: 100%;
+}
 
 body {
-    background-color: #a75f37;
+    /* background-color: #a75f37; */
+    background-image: radial-gradient(closest-side at 80% 55%,#f2d6ce,#a75f37);
     /* margin: 5%; */
     padding-left: 15%;
     padding-top: 23%;
@@ -24,4 +29,27 @@ a{
     font-weight: 200;
     font-size: 80px;
     text-decoration: none;
+}
+
+.present {
+    transition-duration: 5s;
+    transform: translate(45em, -5em) scale(1.5);
+
+    animation-name: present;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes present {
+    from {
+        opacity: 0;
+    }
+    to{
+        opacity: 100;
+        transform: translate(45em, -5em) scale(1.5);
+    }
 }
