--- a/pageFive/css/pageFiveStyling.css
+++ b/pageFive/css/pageFiveStyling.css
@@ -6,20 +6,36 @@
 
 body {
     background-color: #ca8e82;
-    margin: 20%;
-    padding-left: 6%;
+    margin: 10%;
+    /* padding-left: 5%; */
+    padding-top: 5%;
 }
 
 p {
     color: #bae0da;
     font-family: "bloom";
     font-weight: 300;
-    font-size: 50px;
+    font-size: 60px;
 }
 
 a {
     text-decoration: none;
     color: #f2e7dd;
     font-family: "fiesta";
-    font-size: 100px;
+    font-size: 150px;
+}
+
+.little {
+    transition-duration: 3s;
+}
+
+.little:hover {
+    transform: scale(0.2);
+}
+
+#pageFive {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
 }
