--- a/pageFour/css/pageFourStyling.css
+++ b/pageFour/css/pageFourStyling.css
@@ -5,7 +5,9 @@
 }
 
 body {
-    background-color: #bae0da;
+    /* background-color: #bae0da; */
+    background-image: radial-gradient(circle,#f2d6ce,#bae0da);
+    margin: 7%;
 }
 
 p {
@@ -13,6 +15,8 @@ p {
     font-family: "children books";
     font-weight: 100;
     font-size: 50px;
+    padding-left: 50%;
+    padding-top: 10%;
 }
 
 a{
@@ -21,5 +25,14 @@ a{
     font-family: "bloom";
     text-transform: uppercase;
     font-weight: 300;
-    font-size: 100px;
+    font-size: 170px;
+    padding-left: 20%;
+}
+
+.know {
+    transition-duration: 2s;
+}
+
+.know:hover {
+    transform: scale(1.5);
 }
