--- a/pageSeven/css/pageSevenStyling.css
+++ b/pageSeven/css/pageSevenStyling.css
@@ -6,12 +6,15 @@
 
 body {
     background-color: rgb(72, 104, 105);
+    padding-top: 5%;
 }
 
 p {
     color: #f2e7dd;
     font-family: "children books";
     font-size: 50px;
+    padding-left: 30%;
+    padding-top: 5%;
 }
 
 a {
@@ -20,4 +23,28 @@ a {
     text-transform: uppercase;
     font-family: "bloom";
     font-size: 80px;
+    padding-left: 40%;
+}
+
+.listening {
+    transform: scale(1.5);
+
+    animation-name: listening;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes listening {
+    from {
+        opacity: 0;
+        transform: scale(1);
+    }
+    to {
+        opacity: 100;
+        transform: scale(1.5);
+    }
 }
