--- a/pageTwo/css/pageTwoStyling.css
+++ b/pageTwo/css/pageTwoStyling.css
@@ -3,17 +3,23 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html {
+    min-height: 100vh;
+    width: 100%;
+}
 body {
-    background-color: #f2d6ce;
-    margin: 20%;
-    padding-left: 5%;
+    /* background-color: #f2d6ce; */
+    background-image: linear-gradient(#ca8e82,#f2d6ce, #d9b99f, #f2e7dd);
+    /* margin: 20%;
+    padding-left: 5%; */
 }
 
 p {
     color: rgb(72, 104, 105);;
     font-family: "bloom";
-    font-size: 100px;
+    font-size: 120px;
+    padding-left: 30%;
+    padding-top: 15%;
 }
 
 a {
@@ -22,4 +28,31 @@ a {
     font-family: "fiesta";
     font-weight: 800;
     font-size: 150px;
+}
+
+.kind {
+    transition-duration: 5s;
+    transform: scale(2) translate(35em);
+
+    animation-name: kind;
+    animation-delay: 0;
+    animation-direction: normal;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+    animation-timing-function: ease-in-out;
+}
+
+/* .kind:hover{
+    background-color: aqua;
+    transform: scale(2) translate(20em);
+} */
+
+@keyframes kind {
+    from {
+        transform: scale(0);
+    }
+    to{
+        transform: scale(2) translate(35em);
+    }
 }
