--- a/pageNine/css/pageNineStyling.css
+++ b/pageNine/css/pageNineStyling.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    background-color: #a75f37;
+    /* background-color: #a75f37; */
+    background-image: linear-gradient(80deg, #a75f37, rgb(72, 104, 105));
     margin: 5%;
     padding-left: 5%;
     padding-top: 13%;
@@ -21,5 +22,5 @@ a {
     color: #f2d6ce;
     text-decoration: none;
     font-family: "children books";
-    font-size: 80px;
+    font-size: 90px;
 }
